# udp_multicast_examples

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  dev_instructions.md  dune-project  multicast_udp.opam  todo.md
.beads/: issues.jsonl
.github/workflows/: ci.yml
docs/plans/: 2026-01-20-coverage-report-design.md  2026-01-20-integration-tests-design.md
lib/: dune  protocol.ml  protocol.mli
test/: dune  test_protocol.ml
